If pfi_address_add() has to extend the buffer, copy the data in the right direction! Fixes PR/41939.